# pauli-algebra

./: README.md  pyproject.toml
pauli_algebra/: .gitignore  __init__.py  _rules.py  _version.py  pauli_algebra.py  pauli_algebra_jax.py  pauli_operator.py  pauli_string.py  tfi.py
tests/: _heis_liovillian.py  test_at.py  test_compare_netket.py  test_pauli_algebra.py  test_pauli_operator.py  test_sampling.py
