[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pauli_algebra"
description = "Some functions to manipulate Paulis fast"
authors = [
  {name = "Marjan MaÄek"},
]
dynamic = ["version"]

requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "jax",
]

[project.optional-dependencies]
dev = [
    "netket"
]

[tool.hatch.build]
include = ["pauli_algebra"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pauli_algebra/_version.py"


# Development tools

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E741"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402","F401"]
